# m4.4_sciwin_client

./: .gitignore  CHANGELOG.md  CITATION.cff  Cargo.toml  LICENSE_APACHE.md  README.md  build.rs  clippy.toml  dist-workspace.toml  echo.cwl  mkdocs.yml  output.txt  results2.txt
.github/: dependabot.yml
.github/workflows/: build-setup.yml  build.yml  bundle.yml  ci.yml  clippy.yaml  clippy.yml  coverage.yml  cwl.yml  docs.yml  draft-pdf.yml  manage-issues.yml  nightly.yml  release.yml  tarpaulin.yml
crates/cwl/: Cargo.toml  README.md
crates/cwl-annotation/: Cargo.toml
crates/cwl-annotation/src/: common.rs  consts.rs  container.rs  lib.rs  performer.rs  person.rs  process.rs
crates/cwl-annotation/tests/: annotate_test.rs
crates/cwl-execution/: Cargo.toml
crates/cwl-execution/src/: docker.rs  environment.rs  expression.rs  inputs.rs  io.rs  lib.rs  main.rs  outputs.rs  preprocess.rs  runner.rs  scatter.rs  staging.rs  util.rs  validate.rs
crates/cwl-execution/src/runner/: command.rs  mod.rs  tool.rs  workflow.rs
crates/cwl-execution/tests/: runner_test.rs
crates/cwl-runner/: Cargo.toml
crates/cwl-runner/src/: environment.rs  error.rs  io.rs  lib.rs  runner.rs  staging.rs  util.rs  validate.rs
crates/cwl/src/: clt.rs  deserialize.rs  et.rs  format.rs  inputs.rs  lib.rs  outputs.rs  packed.rs  prelude.rs  requirements.rs  types.rs  wf.rs
crates/cwl_annotation/: Cargo.toml
crates/cwl_core/: Cargo.toml  clippy.toml
crates/cwl_core/src/: io.rs  packed.rs  types.rs
crates/cwl_execution/: Cargo.toml
crates/cwl_execution/src/: docker.rs  environment.rs  inputs.rs  lib.rs  scatter.rs  staging.rs  validate.rs
crates/cwl_execution/src/runner/: command.rs
crates/cwl_execution/tests/: runner_test.rs
crates/lib-core/: Cargo.toml
crates/lib-core/src/: io.rs  lib.rs
crates/lib-cwl/: Cargo.toml
crates/lib-cwl/src/: clt.rs  io.rs  lib.rs  loader.rs  requirements.rs  wf.rs
crates/lib-cwl/src/execution/: environment.rs  runner.rs  staging.rs  util.rs  validate.rs
crates/remote-execution/: Cargo.toml
crates/remote-execution/src/: api.rs  arc_entities.rs  arc_rocrate.rs  lib.rs  parser.rs  prelude.rs  reana.rs  rocrate.rs  utils.rs
crates/remote-execution/tests/test_data/: reana_logs.txt  ro-crate-metadata.json  workflow.json
crates/remote-execution/tests/test_data/hello_world/workflows/plot/: plot.cwl
crates/remote_execution/: Cargo.toml
crates/remote_execution/src/: parser.rs  utils.rs
crates/util/: Cargo.toml
crates/util/src/: lib.rs
docs/: astro.config.mjs  execute.md  get_s4n.ps1  get_s4n.sh  index.md  init.md  package-lock.json  package.json  tool.md  workflow.md
docs/examples/: advanced-example.md  index.md  tool-creation.md  workflow-creation.md
docs/getting-started/: development.md  example.md  index.md  installation.md
docs/public/: get_s4n.ps1  get_s4n.sh
docs/reference/: annotate.md  execute.md  index.md  init.md  sync.md  tool.md  workflow.md
docs/src/assets/: s4n.txt  s4n_create.txt
docs/src/assets/commands/: s4n_create_calc.txt  s4n_create_plot.txt  s4n_ex.txt  s4n_help.txt  s4n_workflow_connect.txt  s4n_workflow_create.txt
docs/src/components/: Footer.astro  Hero.astro  PageFrame.astro  RotatingCodeBlock.astro
docs/src/content/docs/: index.mdx
docs/src/content/docs/examples/: advanced-example.md  advanced-example.mdx  corn-prediction-example.mdx  corn_prediction_example.mdx  getting-started.mdx  index.md  index.mdx  tool-creation.mdx  workflow-creation.md  workflow-creation.mdx
docs/src/content/docs/getting-started/: development.md  development.mdx  example.md  index.mdx  installation.md  installation.mdx
docs/src/content/docs/reference/: annotate.mdx  (+16 more)
docs/src/styles/: global.css
docs/stylesheets/: extra.css
mk_docs/stylesheets/: extra.css
paper/: paper.bib  paper.md
resources/: default.gitignore  make.py
src/: cli.rs  config.rs  cwl.rs  init.rs  io.rs  lib.rs  loader.rs  log.rs  main.rs  parser.rs  reana.rs  render.rs  repo.rs  util.rs
src/commands/: annotate.rs  connect.rs  create.rs  execute.rs  init.rs  list.rs  manifest.rs  mod.rs  packages.rs  reana.rs  remove.rs  save.rs  sync.rs  tool.rs  visualize.rs  workflow.rs
src/cwl/: clt.rs  cwl_tests.rs  deserialize.rs  format.rs  inputs.rs  loader.rs  mod.rs  outputs.rs  parser.rs  requirements.rs  runner.rs  types.rs  wf.rs
src/cwl/execution/: environment.rs  runner.rs  staging.rs  util.rs  validate.rs
src/execution/: environment.rs  mod.rs  runner.rs  staging.rs  util.rs  validate.rs
src/gui/: mod.rs
src/parser/: inputs.rs  mod.rs  outputs.rs  postprocess.rs
src/tool/: cli_tool.rs  input.rs  mod.rs  parser.rs  tool.rs
src/util/: io.rs  mod.rs  render.rs  repo.rs
testdata/: echo-job.yml  echo.py  echo2.py  echo_id.cwl  echo_inline.py  input_alt.txt  read_bin.py  remote.cwl  script_test.py  test-wf.cwl  test-wf_features.cwl  wf_inout.cwl  wf_inout_dir.cwl
testdata/docs/: sleep.py
testdata/hello_world/workflows/main/: main.cwl
testdata/packed/: calculation_packed.cwl  main_packed.cwl
tests/: annotate_test.rs  cli_test.rs  command_parser_test.rs  cwl_parse_test.rs  cwl_simple_test.rs  cwl_test.rs  doc_tests.rs  execute_integration_test.rs  init_test.rs  io_test.rs  ls_rm_test.rs  remove_test.rs  runner_test.rs  test_parser.rs  tool_cwl_test.rs  tool_integration_test.rs  tool_test.rs  util_test.rs  workflow_integration_test.rs
tests/common/: Cargo.toml  git.rs  lib.rs  mod.rs
tests/test_data/: array_test.cwl  create_dir.py  default.cwl  echo.cwl  echo2.py  echo3.py  echo_inline.py  example_input.RData  input.txt  input2.txt  inputs.yml  mkdir.cwl  mkdir_wf.cwl  read_bin.cwl  reana.yaml  reana_logs.txt  remote.cwl  ro-crate-metadata.json  subfolders.py  test.R  wf_inout_file.cwl  workflow.json
tests/test_data/docs/: echo.py  load.py  population.csv  sleep.py
tests/test_data/packed/: calculation_packed.cwl  main_packed.cwl
tests/test_utils/: Cargo.toml  lib.rs
ui/: main_window.slint  mainwindow.slint  sidebar.slint
wix/: main.wxs
workflows/echo/: echo.cwl
workflows/echo2/: echo2.cwl
workflows/ls/: ls.cwl
(+14 files in other folders)
