[package]
name = "s4n"
description = "SciWIn Client: Reproducible computational Workflows made easy!"
version = "0.7.0"
edition = "2021"
repository = "https://github.com/fairagro/m4.4_sciwin_client"
license = "MIT OR Apache-2.0"
authors = [
    "Jens Krumsieck",
    "Antonia Leidel",
    "Harald von Waldow",
    "Patrick König",
]
keywords = [
    "cwl",
    "common workflow language",
    "SciWIn",
    "workflow",
    "workflow",
    "fairagro",
]
categories = ["science"]

# https://github.com/rscarson/rustyscript/issues/332
[patch.crates-io]
deno_media_type = { git = 'https://github.com/denoland/deno_media_type', tag = "0.2.6" }

[dependencies]
commonwl = { path = "crates/cwl" }
cwl-execution = { path = "crates/cwl-execution" }
remote-execution = { path = "crates/remote-execution" }
log = { workspace = true }
pathdiff = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
keyring = { workspace = true }
rustyscript = "0.11.0"
clap = { version = "4.5.41", features = ["derive", "wrap_help"] }
clap_complete = "4.5.55"
colored = "3.0.0"
dialoguer = "0.11.0"
git2 = { version = "0.20.2", features = ["vendored-openssl"] }
prettytable-rs = "0.10.0"
rust_xlsxwriter = "0.89.1"
shlex = "1.3.0"
slugify = "0.1.0"
syntect = { version = "5.2.0", default-features = false, features = [
    "regex-fancy",
    "parsing",
    "default-themes",
    "default-syntaxes",
] }
tokio = { version = "1.46.1", features = ["macros"] }
walkdir = "2.5.0"
semver = { version = "1.0.26", features = ["serde"] }
smart-default = "0.7.1"
similar = "2.7.0"
configparser = "3.1.0"

[dev-dependencies]
assert_cmd = "2.0.17"
calamine = "0.29.0"
fstest = "0.2.4"
predicates = "3.1.3"
rstest = "0.25.0"
serial_test = "3.1.1"
whoami = "1.6.0"
mockito = "1.7.0"
httpmock = "0.7.0"

# Workspace settings
[workspace]
members = ["crates/*", "."]

[workspace.dependencies]
log = "0.4.27"
pathdiff = "0.2.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_yaml = "0.9.34-deprecated"
rand = "0.9.2"
reqwest = { version = "0.12.22", features = ["json", "blocking"] }
toml = "0.9.2"
toml_edit = { version = "0.23.2", features = ["serde"] }
tempfile = "3.19.1"
keyring = { version = "3.6.2", features = [
    "apple-native",
    "linux-native",
    "windows-native",
] }

# Dist Settings
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.wix]
upgrade-guid = "0E96056C-17BE-44EF-B299-12D19B4FFDF4"
path-guid = "4F851203-47E0-4E29-A325-6C14EA33173B"
license = false
eula = false
