[package]
name = "s4n"
description = "SciWIn Client: Reproducible computational Workflows made easy!"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
keywords = [
    "cwl",
    "common workflow language",
    "SciWIn",
    "workflow",
    "workflow",
    "fairagro",
]
categories = ["science"]

[lints]
workspace = true

[dependencies]
commonwl = { path = "crates/cwl" }
cwl-execution = { path = "crates/cwl-execution" }
remote-execution = { path = "crates/remote-execution" }
cwl-annotation = { path = "crates/cwl-annotation" }
util = { path = "crates/util" }

anyhow = { workspace = true }
dialoguer = { workspace = true }
git2 = { workspace = true }
keyring = { workspace = true }
log = { workspace = true }
pathdiff = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
uuid = { workspace = true }

clap = { version = "4.5.44", features = ["derive", "wrap_help"] }
clap_complete = "4.5.57"
colored = "3.0.0"
configparser = "3.1.0"
prettytable-rs = "0.10.0"
rust_xlsxwriter = "0.89.1"
shlex = "1.3.0"
slugify = "0.1.0"
syntect = { version = "5.2.0", default-features = false, features = [
    "regex-fancy",
    "parsing",
    "default-themes",
    "default-syntaxes",
] }
semver = { version = "1.0.26", features = ["serde"] }
smart-default = "0.7.1"
similar = "2.7.0"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.17"
calamine = "0.30.0"
fstest = "0.2.4"
predicates = "3.1.3"

test_utils = { workspace = true }
rstest = { workspace = true }
serial_test = { workspace = true }

# Workspace settings
[workspace]
members = ["crates/*", ".", "tests/test_utils"]

[workspace.package]
version = "0.8.0"
edition = "2024"
repository = "https://github.com/fairagro/m4.4_sciwin_client"
license = "MIT OR Apache-2.0"
authors = [
    "Jens Krumsieck",
    "Antonia Leidel",
    "Harald von Waldow",
    "Patrick König",
]

[workspace.dependencies]
anyhow = "1.0.99"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
fancy-regex = "0.15.0"
git2 = { version = "0.20.2", features = ["vendored-openssl"] }
keyring = { version = "3.6.3", features = [
    "apple-native",
    "linux-native",
    "windows-native",
] }
log = "0.4.27"
pathdiff = "0.2.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9.34-deprecated"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = [
    "json",
    "blocking",
    "cookies",
    "rustls-tls",
    "http2",
], default-features = false }
toml = "0.9.5"
toml_edit = { version = "0.23.3", features = ["serde"] }
tempfile = "3.21.0"
tokio = { version = "1.47.1", features = ["macros"] }
urlencoding = "2.1.3"
uuid = { version = "1.18.0", features = ["v4"] }

# dev dependencies
test_utils = { path = "tests/test_utils" }
rstest = "0.26.1"
serial_test = "3.1.1"

[workspace.lints.clippy]
case_sensitive_file_extension_comparisons = "warn"
borrow_as_ptr = "warn"
format_collect = "warn"
inefficient_to_string = "warn"
large_types_passed_by_value = "warn"
manual_assert = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
manual_string_new = "warn"
needless_pass_by_value = "warn"
option_option = "warn"
ptr_as_ptr = "warn"
wildcard_imports = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
str_split_at_newline = "warn"
unnecessary_join = "warn"
unnecessary_literal_bound = "warn"
unnecessary_semicolon = "warn"

# Dist Settings
[profile.dist]
inherits = "release"
lto = "thin"
