[workspace]
members = [
    "packages/cli",
    "packages/core",
    "packages/cwl",
    "packages/cwl_annotation",
    "packages/cwl_core",
    "packages/cwl_execution",
    "packages/reana",
    "packages/repository",
    "packages/util",
    "packages/test_utils", "packages/remote_execution",
]
resolver = "3"

[workspace.package]
version = "1.0.0"
edition = "2024"
repository = "https://github.com/fairagro/m4.4_sciwin_client"
license = "MIT OR Apache-2.0"
authors = [
    "Jens Krumsieck",
    "Antonia Leidel",
    "Harald von Waldow",
    "Patrick König",
    "Xaver Stiensmeier",
]

[workspace.dependencies]
anyhow = "1.0.100"
colored = "3.0.0"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
fancy-regex = "0.15.0"
git2 = { version = "0.20.2", features = ["vendored-openssl"] }
keyring = { version = "3.6.3", features = [
    "apple-native",
    "linux-native",
    "windows-native",
] }
log = "0.4.28"
pathdiff = "0.2.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34-deprecated"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = [
    "json",
    "blocking",
    "cookies",
    "rustls-tls",
    "http2",
], default-features = false }
toml = "0.9.6"
toml_edit = { version = "0.23.7", features = ["serde"] }
tempfile = "3.23.0"
tokio = { version = "1.47.1", features = ["macros"] }
urlencoding = "2.1.3"
uuid = { version = "1.18.1", features = ["v4"] }

# dev dependencies
test_utils = { path = "packages/test_utils" }
rstest = "0.26.1"
fstest = "0.3.0"
serial_test = "3.1.1"

[workspace.lints.clippy]
case_sensitive_file_extension_comparisons = "warn"
borrow_as_ptr = "warn"
format_collect = "warn"
inefficient_to_string = "warn"
large_types_passed_by_value = "warn"
manual_assert = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
manual_string_new = "warn"
needless_pass_by_value = "warn"
option_option = "warn"
ptr_as_ptr = "warn"
wildcard_imports = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
str_split_at_newline = "warn"
unnecessary_join = "warn"
unnecessary_literal_bound = "warn"
unnecessary_semicolon = "warn"

# Dist Settings
[profile.dist]
inherits = "release"
lto = "thin"
