[package]
name = "cwl-annotation"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
util = { path = "../util" }
dialoguer = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
test_utils = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
