[package]
name = "cwl-execution"
version = "0.7.0"
edition = "2021"

[dependencies]
commonwl = { path = "../cwl" }
fancy-regex = { workspace = true }
log = { workspace = true }
pathdiff = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true }

glob = "0.3.2"
nix = {version = "0.30.1", features = ["user"] }
rustyscript = "0.11.0"
sysinfo = "0.36.1"
urlencoding = "2.1.3"
wait-timeout = "0.2.1"

[dev-dependencies]
serial_test = "3.1.1"
