[package]
name = "cwl-execution"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
commonwl = { path = "../cwl" }
util = { path = "../util" }

fancy-regex = { workspace = true }
log = { workspace = true }
pathdiff = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true }
urlencoding = { workspace = true }

glob = "0.3.3"
nix = { version = "0.30.1", features = ["user"] }
rustyscript = { version = "0.12.2", features = [
    "worker",
    "web_stub",
    "console",
    "url",
], default-features = false }
sysinfo = "0.37.0"

[dev-dependencies]
serial_test = { workspace = true }
test_utils = { workspace = true }
