[package]
name = "commonwl"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "CWL Rust library, intended to be used for YAML parsing with serde"
readme = "README.md"
authors = [
    "Jens Krumsieck",
    "Antonia Leidel",
    "Harald von Waldow",
    "Patrick König",
]
keywords = [
    "cwl",
    "common workflow language",
    "commonwl",
    "workflow",
    "fairagro",
]
categories = ["science"]

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
sha1 = "0.10.6"

[dev-dependencies]
rstest = "0.26.1"
