[package]
name = "commonwl"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "CWL Rust library, intended to be used for YAML parsing with serde"
readme = "README.md"
authors = [
    "Jens Krumsieck",
    "Antonia Leidel",
    "Harald von Waldow",
    "Patrick König",
]
keywords = [
    "cwl",
    "common workflow language",
    "commonwl",
    "workflow",
    "fairagro",
]
categories = ["science"]

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
sha1 = "0.10.6"
url = "2.5.4"

[dev-dependencies]
rstest = { workspace = true }
test_utils = { workspace = true }
