
[package]
name = "commonwl"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
description = "CWL Rust library, intended to be used for YAML parsing with serde"
readme = "README.md"
keywords = [
    "cwl",
    "common workflow language",
    "commonwl",
    "workflow",
    "fairagro",
]
categories = ["science"]

[lints]
workspace = true

[features]
default = []
execution = ["cwl_execution"]
annotation = ["cwl_annotation"]

[dependencies]
cwl_core = { path = "../cwl_core" }
cwl_execution = { path = "../cwl_execution", optional = true}
cwl_annotation = { path = "../cwl_annotation", optional = true}
