[package]
name = "remote-execution"
version = "0.6.1"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.15", features = ["blocking", "json", "cookies"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true }
pathdiff = { workspace = true }
anyhow = "1.0.98"

toml = { workspace = true }
toml_edit = { workspace = true }
uuid = { version = "1.17.0", features = ["v4"] }
chrono = { version = "0.4.41"}
regex = { version = "1.11.1"}

[dev-dependencies]
mockito = "1.7.0"
httpmock = "0.7.0"
