[package]
name = "remote-execution"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
util = { path = "../util" }
anyhow = { workspace = true }
fancy-regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true }
pathdiff = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
keyring = { workspace = true }
walkdir = { workspace = true}

uuid = { version = "1.17.0", features = ["v4"] }
chrono = { version = "0.4.41" }

[dev-dependencies]
mockito = "1.7.0"
httpmock = "0.7.0"
